[gd_scene load_steps=4 format=3 uid="uid://b0l21cvigq4rv"]

[ext_resource type="Script" path="res://scenes/components/button_decoration.gd" id="1_jilja"]
[ext_resource type="Script" path="res://scripts/LabelPrice.gd" id="3_bqci5"]
[ext_resource type="Texture2D" uid="uid://brkwig8xnwy7c" path="res://assets/banane_s.png" id="4_xykuc"]

[node name="ButtonClicker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_jilja")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="AspectRatioContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/Button/MarginContainer"]
layout_mode = 2

[node name="LabelText" type="Label" parent="AspectRatioContainer/Button/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "{labelText}"

[node name="LabelPrice" type="Label" parent="AspectRatioContainer/Button/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "{labelPrice}"
script = ExtResource("3_bqci5")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="AspectRatioContainer/Button/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DecorationPicture" type="TextureRect" parent="AspectRatioContainer/Button/MarginContainer/VBoxContainer/AspectRatioContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_xykuc")
expand_mode = 3
stretch_mode = 4

[connection signal="pressed" from="AspectRatioContainer/Button" to="." method="_on_button_pressed"]
